--- a/journey-map/package.json
+++ b/journey-map/package.json
@@ -13,7 +13,8 @@
     "lint-fix": "eslint --fix . && prettier . --write"
   },
   "dependencies": {
-    "express": "5.0.1"
+    "express": "5.0.1",
+    "express-basic-auth": "^1.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
