--- a/.github/workflows/secure-post-merge.yml
+++ b/.github/workflows/secure-post-merge.yml
@@ -65,11 +65,11 @@ jobs:
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: '21'
+          distribution: 'corretto'
           cache: gradle
 
       - name: Set up Python 3.8
@@ -80,7 +80,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@8379f6a1328ee0e06e2bb424dadb7b159856a326 # v4.4.0
         with:
-          gradle-version: 8.2.1
+          gradle-version: "8.13"
 
       - name: Set up SAM CLI
         uses: aws-actions/setup-sam@v2
