--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ powertools = "1.20.0"
 
 [libraries]
 apacheHttpCore = "org.apache.httpcomponents.core5:httpcore5:5.3.3"
-aspectj = { module = "org.aspectj:aspectjrt", version = { strictly = "1.9.8" } }
+aspectj = "org.aspectj:aspectjrt:1.9.21.2"
 assertJ = "org.assertj:assertj-core:3.27.3"
 awsLambdaJavaCore = "com.amazonaws:aws-lambda-java-core:1.3.0"
 awsLambdaJavaEvents = "com.amazonaws:aws-lambda-java-events:3.15.0"
