--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -78,6 +78,8 @@ core:
     apiBaseUrl: "https://cimit-api.stubs.account.gov.uk"
   evcs:
     applicationUrl: "https://evcs.stubs.account.gov.uk"
+  storedIdentityService:
+    componentId: "PLACEHOLDER-VALUE"
   credentialIssuers:
     address:
       id: address
