PYIC-7872: Update tests, hashing method and dev01 -> devShared API testing reference

--- a/.gitignore
+++ b/.gitignore
@@ -64,5 +64,5 @@ api-tests/.env*
 !api-tests/.env.template
 !api-tests/.env.dev.template
 !api-tests/.env.local
-!api-tests/.env.dev01
+!api-tests/.env.devShared
 !api-tests/.env.build
