--- a/api-tests/.env.devShared
+++ b/api-tests/.env.devShared
@@ -1,4 +1,4 @@
-# Dev01 env config
+# Shared dev env config
 CORE_BACK_COMPONENT_ID="https://dev.01.dev.identity.account.gov.uk"
 CORE_BACK_INTERNAL_API_URL="https://internal-test-api-dev.01.dev.identity.account.gov.uk"
 CORE_BACK_INTERNAL_API_KEY=${CORE_BACK_INTERNAL_API_KEY}-dev
