PYIC-7872: Revert branch-specific code

--- a/.github/workflows/secure-post-merge.yml
+++ b/.github/workflows/secure-post-merge.yml
@@ -39,7 +39,7 @@ jobs:
   build-test-images-if-needed:
     needs: check-if-api-tests-changed
     if: ${{ needs.check-if-api-tests-changed.outputs.api-tests-changed == 'true' }}
-    uses: govuk-one-login/ipv-core-back/.github/workflows/secure-pipeline-api-tests-image.yml@pyic-7872
+    uses: govuk-one-login/ipv-core-back/.github/workflows/secure-pipeline-api-tests-image.yml@main
     with:
       environment: ${{ github.event_name == 'workflow_dispatch' && 'dev01' || 'build' }}
     secrets: inherit # pragma: allowlist secret
