PYIC-8246: Add feature flag

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -371,7 +371,12 @@ core:
     kidJarHeaderEnabled: true
     drivingLicenceAuthCheck: true
     storedIdentityServiceEnabled: false
+    accountInterventionsEnabled: false
+
   features:
+    accountInterventions:
+      featureFlags:
+        accountInterventionsEnabled: true
     storedIdentityService:
       featureFlags:
         storedIdentityServiceEnabled: true
