PYIC-8246: Call AIS API to check for reprove identity intervention

--- a/api-tests/.env.dev.template
+++ b/api-tests/.env.dev.template
@@ -8,6 +8,7 @@ ORCHESTRATOR_REDIRECT_URL="https://orch-dev-danc.02.core.dev.stubs.account.gov.u
 JAR_SIGNING_KEY='{"kty":"EC","d":"OXt0P05ZsQcK7eYusgIPsqZdaBCIJiW4imwUtnaAthU","crv":"P-256","x":"E9ZzuOoqcVU4pVB9rpmTzezjyOPRlOmPGJHKi8RSlIM","y":"KlTMZthHZUkYz5AleTQ8jff0TJiS3q2OB9L5Fw4xA04", "kid":"orch-signing-stubs-prod-FI4xysvMVdRtkt6xmO5gqcaTF4Tf9NKD1zdg3T8y69M"}' # pragma: allowlist secret
 ASYNC_QUEUE_NAME="stubQueue_criResponseQueue_dev-danc"
 ASYNC_QUEUE_DELAY=5
+AIS_STUB_BASE_URL="https://ais.stubs.account.gov.uk"
 EVCS_STUB_BASE_URL="https://evcs.stubs.account.gov.uk"
 TICF_STUB_BASE_URL="https://ticf.stubs.account.gov.uk"
 CIMIT_INTERNAL_API_URL="https://cimit-api.stubs.account.gov.uk"
