--- a/api-tests/.env.local
+++ b/api-tests/.env.local
@@ -8,6 +8,7 @@ ORCHESTRATOR_REDIRECT_URL="http://localhost:4500/callback"
 JAR_SIGNING_KEY='{"kty":"EC","d":"OXt0P05ZsQcK7eYusgIPsqZdaBCIJiW4imwUtnaAthU","crv":"P-256","x":"E9ZzuOoqcVU4pVB9rpmTzezjyOPRlOmPGJHKi8RSlIM","y":"KlTMZthHZUkYz5AleTQ8jff0TJiS3q2OB9L5Fw4xA04", "kid":"orch-signing-stubs-prod-FI4xysvMVdRtkt6xmO5gqcaTF4Tf9NKD1zdg3T8y69M"}' # pragma: allowlist secret
 LOCAL_AUDIT_EVENTS=true
 ASYNC_QUEUE_DELAY=2
+AIS_STUB_BASE_URL="https://ais.stubs.account.gov.uk"
 CIMIT_STUB_BASE_URL="https://cimit.stubs.account.gov.uk"
 CIMIT_INTERNAL_API_URL="https://cimit-api.stubs.account.gov.uk"
 EVCS_STUB_BASE_URL="https://evcs.stubs.account.gov.uk"
