--- a/settings.gradle
+++ b/settings.gradle
@@ -26,7 +26,8 @@ include "lambdas",
 		"lambdas:reset-session-identity",
 		"lambdas:user-reverification",
 		"lambdas:process-mobile-app-callback",
-		'lambdas:check-mobile-app-vc-receipt',
+		"lambdas:check-mobile-app-vc-receipt",
+		"libs:ais-service",
 		"libs:audit-service",
 		"libs:cimit-service",
 		"libs:common-services",
