--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -3232,7 +3232,7 @@ Resources:
           ReturnData: true
           MetricStat:
             Metric:
-              Namespace: AWS/Lambda
+              Namespace: Custom/Lambda
               MetricName: IOExceptionCount
             Period: 60
             Stat: Sum
