PYIC-8247: Store account intervention state at start of journey and check at the end

--- a/lambdas/initialise-ipv-session/build.gradle
+++ b/lambdas/initialise-ipv-session/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	annotationProcessor libs.lombok
 
 	testImplementation libs.hamcrest,
+			libs.assertJ,
 			libs.jacksonDatabind,
 			libs.junitJupiter,
 			project(path: ':libs:common-services', configuration: 'tests'),
