--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/reverification.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/reverification.yaml
@@ -159,6 +159,9 @@ states:
     events:
       next:
         targetState: WE_MATCHED_YOU_TO_YOUR_ONE_LOGIN_PAGE
+      account-intervention:
+        targetJourney: FAILED
+        targetState: FAILED_ACCOUNT_INTERVENTION
       enhanced-verification:
         targetState: RETURN_TO_RP
       alternate-doc-invalid-dl:
@@ -183,6 +186,9 @@ states:
     events:
       next:
         targetState: RETURN_TO_RP
+      account-intervention:
+        targetJourney: FAILED
+        targetState: FAILED_ACCOUNT_INTERVENTION
       fail-with-ci:
         targetState: RETURN_TO_RP
       coi-check-failed:
