PYIC-8247: Fix event name

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/reuse-existing-identity.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/reuse-existing-identity.yaml
@@ -64,7 +64,7 @@ states:
       vcs-not-correlated:
         targetJourney: FAILED
         targetState: FAILED
-      unmet:
+      profile-unmet:
         targetJourney: FAILED
         targetState: FAILED
       fail-with-ci:
