PYIC-8247: Make process-candidate-identity events consistent for EXISTING identity type

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/failed.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/failed.yaml
@@ -291,12 +291,18 @@ states:
       account-intervention:
         targetJourney: FAILED
         targetState: FAILED_ACCOUNT_INTERVENTION
+      fail-with-ci:
+        targetJourney: TECHNICAL_ERROR
+        targetState: ERROR_NO_TICF
       profile-unmet:
         targetJourney: TECHNICAL_ERROR
         targetState: ERROR_NO_TICF
       vcs-not-correlated:
         targetJourney: TECHNICAL_ERROR
         targetState: ERROR_NO_TICF
+      error:
+        targetJourney: TECHNICAL_ERROR
+        targetState: ERROR
 
   DELETE_HANDOVER_PAGE:
     response:
