--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -2913,6 +2913,55 @@ Resources:
       FilterPattern: ""
       LogGroupName: !Ref ProcessCandidateIdentityFunctionLogGroup
 
+  FetchJourneyTransitionsFunction:
+    Type: AWS::Serverless::Function
+    DependsOn:
+      - FetchJourneyTransitionsFunctionLogGroup
+    Properties:
+      # checkov:skip=CKV_AWS_115: We do not have enough data to allocate the concurrent execution allowance per function.
+      # checkov:skip=CKV_AWS_116: Lambdas invoked via API Gateway do not support Dead Letter Queues.
+      # checkov:skip=CKV_AWS_117: Lambdas will migrate to our own VPC in future work.
+      FunctionName: !Sub "fetch-journey-transitions-${Environment}"
+      Handler: uk.gov.di.ipv.core.fetchjourneytransitions.FetchJourneyTransitionsHandler::handleRequest
+      PackageType: Zip
+      CodeUri: ../lambdas/fetch-journey-transitions
+      Tracing: Active
+      Environment:
+        # checkov:skip=CKV_AWS_173: These environment variables do not require encryption.
+        Variables:
+          POWERTOOLS_SERVICE_NAME: !Sub fetch-journey-transitions-${Environment}
+      VpcConfig:
+        SubnetIds:
+          - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdA
+          - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdB
+        SecurityGroupIds:
+          - !GetAtt LambdaSecurityGroup.GroupId
+      Policies:
+        - VPCAccessPolicy: { }
+        - Statement:
+            - Sid: CloudWatchLogsInsights
+              Effect: Allow
+              Action:
+                - logs:StartQuery
+                - logs:GetQueryResults
+              Resource: !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/process-journey-event-${Environment}
+      AutoPublishAlias: live
+
+  FetchJourneyTransitionsFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    # checkov:skip=CKV_AWS_158: No need for customer managed keys for short lived logs
+    Properties:
+      RetentionInDays: 30
+      LogGroupName: !Sub "/aws/lambda/fetch-journey-transitions-${Environment}"
+
+  FetchJourneyTransitionsFunctionLogGroupSubscriptionFilter:
+    Type: AWS::Logs::SubscriptionFilter
+    Condition: IsStagingIntProd
+    Properties:
+      DestinationArn: "arn:aws:logs:eu-west-2:885513274347:destination:csls_cw_logs_destination_prodpython"
+      FilterPattern: ""
+      LogGroupName: !Ref FetchJourneyTransitionsFunctionLogGroup
+
   SessionCredentialsTable:
     Type: AWS::DynamoDB::Table
     Properties:
