--- a/journey-map/package.json
+++ b/journey-map/package.json
@@ -18,6 +18,7 @@
     "test": "node --import tsx --test src/**/*.test.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.817.0",
     "express": "5.0.1",
     "mermaid": "10.9.3",
     "svg-pan-zoom": "3.6.2",
