--- a/settings.gradle
+++ b/settings.gradle
@@ -27,6 +27,7 @@ include "lambdas",
 		"lambdas:user-reverification",
 		"lambdas:process-mobile-app-callback",
 		"lambdas:check-mobile-app-vc-receipt",
+		"lambdas:manual-f2f-pending-reset",
 		"libs:ais-service",
 		"libs:audit-service",
 		"libs:cimit-service",
