Change well know enpoint to point to new v2 file in s3 bucket.

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -671,7 +671,7 @@ Resources:
                   - "s3:GetObject"
                 Resource:
                   - !Sub
-                    - "arn:aws:s3:::ipv-core-well-known-jwks-${env}/well-known.json"
+                    - "arn:aws:s3:::ipv-core-well-known-jwks-${env}/well-known-v2.json"
                     - env: !If
                         - IsDevelopment
                         - !If
