--- a/openAPI/core-back-external.yaml
+++ b/openAPI/core-back-external.yaml
@@ -146,7 +146,7 @@ paths:
         httpMethod: GET
         uri:
           Fn::Sub:
-            - arn:aws:apigateway:eu-west-2:s3:path/ipv-core-well-known-jwks-${env}/well-known.json
+            - arn:aws:apigateway:eu-west-2:s3:path/ipv-core-well-known-jwks-${env}/well-known-v2.json
             - env:
                 Fn::If:
                   - IsDevelopment
